fixed overflow in journy heading in mobile size

--- a/src/components/OurJourney/OurJourney.css
+++ b/src/components/OurJourney/OurJourney.css
@@ -46,11 +46,9 @@ h2,
 
 .title .bg-text {
 	width: 320px;
-	padding: 18px 40px;
 	font-size: 49px;
 	letter-spacing: 1.5px;
 	margin-left: calc(8% + 40px);
-	text-align: center;
 	height: 80px;
 }
 
